--- a/SunnyLand/SunnyLand.csproj
+++ b/SunnyLand/SunnyLand.csproj
@@ -352,7 +352,7 @@
     <Compile Include="Assets\Script\UIFramework\UIPanel\BasePanel.cs" />
     <Compile Include="Assets\Script\UIFramework\UIScript\LevelSelectButton.cs" />
     <Compile Include="Assets\Script\UIFramework\UIScript\LevelSelectDrag.cs" />
-    <Compile Include="Assets\Script\UIFramework\UIScript\PlayerSelect.cs" />
+    <Compile Include="Assets\Script\UIFramework\UIScript\SelectPlayer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Demigiant\DOTween\DOTween.XML" />
