--- a/SunnyLand/SunnyLand.csproj
+++ b/SunnyLand/SunnyLand.csproj
@@ -310,7 +310,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\DeathPanel.cs" />
     <Compile Include="Assets\Demigiant\DOTweenPro\DOTweenAnimation.cs" />
     <Compile Include="Assets\Script\0_Scene_Start&amp;Level\MapMove.cs" />
     <Compile Include="Assets\Script\1_Scene_Level_1-1\Ctrl\AudioManager.cs" />
@@ -346,6 +345,7 @@
     <Compile Include="Assets\Script\UIFramework\UIPanel\0_Scene_Start&amp;Level\StorePanel.cs" />
     <Compile Include="Assets\Script\UIFramework\UIPanel\0_Scene_Start&amp;Level\TaskPanel.cs" />
     <Compile Include="Assets\Script\UIFramework\UIPanel\1_Scene_Level_1-1\BalancePanel.cs" />
+    <Compile Include="Assets\Script\UIFramework\UIPanel\1_Scene_Level_1-1\DeathPanel.cs" />
     <Compile Include="Assets\Script\UIFramework\UIPanel\1_Scene_Level_1-1\EndingPanel.cs" />
     <Compile Include="Assets\Script\UIFramework\UIPanel\1_Scene_Level_1-1\ExitWarningPanel.cs" />
     <Compile Include="Assets\Script\UIFramework\UIPanel\1_Scene_Level_1-1\MainMenuPanel.cs" />
