--- a/SunnyLand/SunnyLand.csproj
+++ b/SunnyLand/SunnyLand.csproj
@@ -374,6 +374,7 @@
     <Compile Include="Assets\Script\UIFramework\UIScript\LevelSelectDrag.cs" />
     <Compile Include="Assets\Script\UIFramework\UIScript\SelectPlayer.cs" />
     <Compile Include="Assets\Script\UIFramework\UIScript\Task.cs" />
+    <Compile Include="Assets\Teststb.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Demigiant\DOTween\DOTween.XML" />
