--- a/GameInterlude/GameInterlude.csproj
+++ b/GameInterlude/GameInterlude.csproj
@@ -283,6 +283,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\BlackSitePanel.cs" />
     <Compile Include="Assets\ChangeScene.cs" />
     <Compile Include="Assets\Interlude.cs" />
   </ItemGroup>
